basic setup stuff

--- a/package.json
+++ b/package.json
@@ -1,1 +1,24 @@
-{"name":"portfolio","version":"1.0.0","private":true,"description":"Portfolio","author":"William Metcalf","keywords":["gatsby"],"scripts":{"develop":"gatsby develop","start":"gatsby develop","build":"gatsby build","serve":"gatsby serve","clean":"gatsby clean"},"dependencies":{"gatsby":"^2.32.3","react":"^16.13.1","react-dom":"^16.13.1"}}
+{
+  "name": "portfolio",
+  "version": "1.0.0",
+  "private": true,
+  "description": "Portfolio",
+  "author": "William Metcalf",
+  "keywords": [
+    "gatsby"
+  ],
+  "scripts": {
+    "develop": "gatsby develop",
+    "start": "gatsby develop",
+    "build": "gatsby build",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean"
+  },
+  "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "gatsby": "^2.32.3",
+    "gatsby-plugin-material-ui": "^2.1.10",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  }
+}
