more setup stuff

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^2.32.3",
     "gatsby-plugin-material-ui": "^2.1.10",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-parallax": "^3.1.2"
   }
 }
