--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@material-ui/core": "^4.11.3",
     "gatsby": "^2.32.3",
     "gatsby-plugin-material-ui": "^2.1.10",
+    "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-parallax": "^3.1.2"
