--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-parallax": "^3.1.2"
+    "react-scroll-parallax": "^2.3.5"
   }
 }
